# omega-tools-mcp

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/omega_mcp/: config.py  logger.py  server.py
src/omega_mcp/clients/: web_search_client.py
src/omega_mcp/core/: config.py  graph_rag.py  logger.py  web_search.py
src/omega_mcp/tools/: graph_search.py  hybrid_kg_vector_search.py  web.py  web_search.py
tests/: test_search.py
