[project]
name = "omega-tools-mcp"
version = "0.1.0"
description = "Universal MCP Server Core Toolkit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "ddgs>=1.0.0",
    "httpx>=0.27.0",
]

# 🛠️ Add this: Tell uv to actively package and link your src/ directory
[tool.uv]
package = true

# 🛠️ Add this: Define standard python project build instructions
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 🛠️ Tell Hatchling exactly which directory to package up 
[tool.hatch.build.targets.wheel]
packages = ["src/omega_mcp"]