[project]
name = "omega-tools-mcp"
version = "0.1.0"
description = "Universal MCP Server Core Toolkit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.2.0",
    "ddgs>=1.0.0",
    "httpx>=0.27.0",
    "neo4j>=5.0.0",
    "chromadb>=0.5.0",
    "beautifulsoup4>=4.12.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omega_mcp"]