# filepath: ./pyproject.toml
[project]
name = "omega-tools-mcp"
version = "0.1.0"
description = "Universal MCP Server Core Toolkit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.2.1",
    "ddgs>=1.0.0",
    "httpx>=0.27.0",
    "neo4j>=5.21.0",
    "chromadb>=0.5.3",
    "beautifulsoup4>=4.12.3",
    "trafilatura>=1.12.0",
]

[tool.uv]
# Toggles the project from package distribution mode to direct application workspace mode
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"